base/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - name: radarr
        image: linuxserver/radarr
        volumeMounts:
        - name: config
          mountPath: /config
        - name: movies
          mountPath: /movies
        - name: torrents
          mountPath: /torrents
        ports:
        - containerPort: 7878
      volumes:
        - name: config
          hostPath:
            path: /opt/radarr/config
        - name: movies
          nfs:
            server: your-nfs-server
            path: /your/path/to/movies
        - name: torrents
          nfs:
            server: your-nfs-server
            path: /your/path/to/torrents
