base/radarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  type: NodePort
  ports:
    - port: 7878
      targetPort: http
      nodePort: 30082
      name: http
  selector:
    app: radarr
