base/radarr/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-lb-to-radarr
spec:
  endpointSelector:
    matchLabels:
      app: radarr
  ingress:
  - fromCIDR:
    - 0.0.0.0/0 
    toPorts:
    - ports:
      - port: "7878"
        protocol: TCP
